[gd_scene load_steps=12 format=3 uid="uid://2n6cedn2nbn8"]

[ext_resource type="Script" path="res://Scripts/UI/Button-Effects.gd" id="1_0vqhp"]
[ext_resource type="Script" path="res://Scripts/UI/Main-Menu.gd" id="1_2rwtq"]
[ext_resource type="Theme" uid="uid://bs4lriti3mm3k" path="res://Style/Button-Main-Menu.tres" id="1_322sc"]
[ext_resource type="Script" path="res://Scripts/UI/Select-Levels-Screen.gd" id="4_oo8be"]
[ext_resource type="PackedScene" uid="uid://c8bh0ftqaahha" path="res://Prefabs/UI/System/Options-Ui.tscn" id="4_vyhjk"]
[ext_resource type="PackedScene" uid="uid://dcii0ykbxfvoi" path="res://Prefabs/UI/System/Select-Level.tscn" id="5_qn4ug"]
[ext_resource type="Texture2D" uid="uid://dtgmy56de8tqr" path="res://Assets/player_circle.png" id="6_d7fc0"]

[sub_resource type="FontVariation" id="FontVariation_7h8jk"]
spacing_glyph = 4

[sub_resource type="LabelSettings" id="LabelSettings_ki17o"]
font = SubResource("FontVariation_7h8jk")
font_size = 80
font_color = Color(0.772549, 0.556863, 0, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0.00784314, 0.00392157, 0.00392157, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="FontVariation" id="FontVariation_tb8kk"]

[sub_resource type="LabelSettings" id="LabelSettings_7qm6r"]
font = SubResource("FontVariation_tb8kk")
font_size = 60
font_color = Color(0.772549, 0.556863, 0, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0.00784314, 0.00392157, 0.00392157, 1)
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rwtq")

[node name="Main" type="ColorRect" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.0666667, 0.470588, 0.709804)
metadata/_edit_lock_ = true

[node name="Titel" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.5
offset_top = 48.0
offset_right = 133.5
offset_bottom = 158.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "SCOPE"
label_settings = SubResource("LabelSettings_ki17o")
horizontal_alignment = 1

[node name="ButtonStart" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 299.0
offset_top = 196.0
offset_right = 420.0
offset_bottom = 247.0
color = Color(0, 0, 0, 0.584314)
script = ExtResource("1_0vqhp")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Main/ButtonStart"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = 4.0
offset_right = 56.5
offset_bottom = 48.0
grow_horizontal = 2
theme = ExtResource("1_322sc")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="ButtonOptions" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 299.0
offset_top = 268.0
offset_right = 420.0
offset_bottom = 319.0
color = Color(0, 0, 0, 0.584314)
script = ExtResource("1_0vqhp")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Main/ButtonOptions"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = 4.0
offset_right = 56.5
offset_bottom = 48.0
grow_horizontal = 2
theme = ExtResource("1_322sc")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ButtonQuit" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 299.0
offset_top = 340.0
offset_right = 420.0
offset_bottom = 391.0
color = Color(0, 0, 0, 0.584314)
script = ExtResource("1_0vqhp")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Main/ButtonQuit"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = 4.0
offset_right = 56.5
offset_bottom = 48.0
grow_horizontal = 2
theme = ExtResource("1_322sc")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="LevelSelect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.0666667, 0.470588, 0.709804)
metadata/_edit_lock_ = true

[node name="Titel" type="Label" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 40.0
offset_right = 194.0
offset_bottom = 132.0
grow_horizontal = 2
text = "SELECT LEVEL"
label_settings = SubResource("LabelSettings_7qm6r")
horizontal_alignment = 1

[node name="Levels" type="Control" parent="LevelSelect"]
anchors_preset = 0
script = ExtResource("4_oo8be")

[node name="Select-level 0" parent="LevelSelect/Levels" instance=ExtResource("5_qn4ug")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 86.0
offset_top = 200.0
offset_right = 86.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1
levelName = "0"

[node name="Select-level 1" parent="LevelSelect/Levels" instance=ExtResource("5_qn4ug")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 191.0
offset_top = 201.0
offset_right = 191.0
offset_bottom = 201.0
grow_horizontal = 1
grow_vertical = 1
levelName = "1"
toLevel = "res://Scene/Levels/Level1.tscn"

[node name="Select-level 2" parent="LevelSelect/Levels" instance=ExtResource("5_qn4ug")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 303.0
offset_top = 201.0
offset_right = 303.0
offset_bottom = 201.0
grow_horizontal = 1
grow_vertical = 1
levelName = "2"
toLevel = "res://Scene/Levels/Level2.tscn"

[node name="Player" type="Node2D" parent="LevelSelect"]
position = Vector2(86, 200)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelSelect/Player"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_d7fc0")

[node name="Options-Ui" parent="." instance=ExtResource("4_vyhjk")]
visible = false
layout_mode = 1

[connection signal="focus_entered" from="Main/ButtonStart/Button" to="Main/ButtonStart" method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Main/ButtonStart/Button" to="Main/ButtonStart" method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Main/ButtonStart/Button" to="Main/ButtonStart" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Main/ButtonStart/Button" to="Main/ButtonStart" method="_on_button_mouse_exited"]
[connection signal="pressed" from="Main/ButtonStart/Button" to="." method="_on_button_start_pressed"]
[connection signal="focus_entered" from="Main/ButtonOptions/Button" to="Main/ButtonOptions" method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Main/ButtonOptions/Button" to="Main/ButtonOptions" method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Main/ButtonOptions/Button" to="Main/ButtonOptions" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Main/ButtonOptions/Button" to="Main/ButtonOptions" method="_on_button_mouse_exited"]
[connection signal="pressed" from="Main/ButtonOptions/Button" to="." method="_on_button_options_pressed"]
[connection signal="focus_entered" from="Main/ButtonQuit/Button" to="Main/ButtonQuit" method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Main/ButtonQuit/Button" to="Main/ButtonQuit" method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Main/ButtonQuit/Button" to="Main/ButtonQuit" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Main/ButtonQuit/Button" to="Main/ButtonQuit" method="_on_button_mouse_exited"]
[connection signal="pressed" from="Main/ButtonQuit/Button" to="." method="_on_button_quit_pressed"]
[connection signal="changeLevel" from="LevelSelect/Levels" to="." method="_on_levels_change_level"]
[connection signal="closeOptions" from="Options-Ui" to="." method="_on_options_ui_close_options"]
[connection signal="closeWindow" from="Options-Ui" to="." method="_on_options_ui_close_window"]
